module(
    name = "bzlmodrio-allwpilib",
    version = "2027.0.0-alpha-1.bcr1",
    compatibility_level = 2027,
)

bazel_dep(name = "platforms", version = "0.0.9")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_shell", version = "0.4.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr2")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7")
archive_override(
    module_name = "rules_bzlmodrio_jdk",
    integrity = "sha256-SrikyrF2v2lENdqn9aFC//d0TkIE620lR60yXTrWFTs=",
    strip_prefix = "rules_bzlmodrio_jdk-4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773",
    urls = ["https://github.com/wpilibsuite/rules_bzlmodRio_jdk/archive/4ecd4cbc97dfbfe2ceefa627de1228e2f2ca5773.tar.gz"],
)

bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3.bcr2")
bazel_dep(name = "bzlmodrio-ni", version = "2025.2.0.bcr1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "com.fasterxml.jackson.core:jackson-annotations:2.15.2",
        "com.fasterxml.jackson.core:jackson-core:2.15.2",
        "com.fasterxml.jackson.core:jackson-databind:2.15.2",
        "org.ejml:ejml-simple:0.43.1",
        "us.hebi.quickbuf:quickbuf-runtime:1.3.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://frcmaven.wpi.edu/release",
    ],
)
use_repo(
    maven,
    "maven",
)

setup_bzlmodrio_allwpilib_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_allwpilib_cpp_dependencies")
use_repo(
    setup_bzlmodrio_allwpilib_cpp_dependencies,
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_headers",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_sources",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_apriltag_apriltag-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_headers",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_sources",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_cameraserver_cameraserver-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_headers",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_sources",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_cscore_cscore-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_headers",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_hal_hal-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_hal_hal-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_sources",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_hal_hal-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm32",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm32debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm32static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_osxuniversal",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_osxuniversaldebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_osxuniversalstatic",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ds_socket_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm32",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm32debug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm32static",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_osxuniversal",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_osxuniversaldebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_osxuniversalstatic",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_gui_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm32",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm32debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm32static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_osxuniversal",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_osxuniversaldebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_osxuniversalstatic",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_client_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_headers",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm32",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm32debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm32static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_osxuniversal",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_osxuniversaldebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_osxuniversalstatic",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_sources",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsarm64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsarm64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsarm64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsx86-64",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsx86-64debug",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsx86-64static",
    "bazelrio_edu_wpi_first_halsim_halsim_ws_server_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_headers",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_sources",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_ntcore_ntcore-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_headers",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_sources",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_romivendordep_romivendordep-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_tools_datalogtool_linuxarm32",
    "bazelrio_edu_wpi_first_tools_datalogtool_linuxarm64",
    "bazelrio_edu_wpi_first_tools_datalogtool_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_datalogtool_osxuniversal",
    "bazelrio_edu_wpi_first_tools_datalogtool_windowsarm64",
    "bazelrio_edu_wpi_first_tools_datalogtool_windowsx86-64",
    "bazelrio_edu_wpi_first_tools_glass_linuxarm32",
    "bazelrio_edu_wpi_first_tools_glass_linuxarm64",
    "bazelrio_edu_wpi_first_tools_glass_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_glass_osxuniversal",
    "bazelrio_edu_wpi_first_tools_glass_windowsarm64",
    "bazelrio_edu_wpi_first_tools_glass_windowsx86-64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_linuxarm32",
    "bazelrio_edu_wpi_first_tools_outlineviewer_linuxarm64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_osxuniversal",
    "bazelrio_edu_wpi_first_tools_outlineviewer_windowsarm64",
    "bazelrio_edu_wpi_first_tools_outlineviewer_windowsx86-64",
    "bazelrio_edu_wpi_first_tools_sysid_linuxx86-64",
    "bazelrio_edu_wpi_first_tools_sysid_osxuniversal",
    "bazelrio_edu_wpi_first_tools_sysid_windowsarm64",
    "bazelrio_edu_wpi_first_tools_sysid_windowsx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_headers",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_sources",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpilibc_wpilibc-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_headers",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_sources",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpilibnewcommands_wpilibnewcommands-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_headers",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_sources",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpimath_wpimath-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_headers",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_sources",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpinet_wpinet-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_headers",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_sources",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_wpiutil_wpiutil-cpp_windowsx86-64staticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_headers",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm32",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm32debug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm32static",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm32staticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm64",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm64debug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm64static",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxarm64staticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxsystemcore",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxsystemcoredebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxsystemcorestatic",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxsystemcorestaticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64debug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64static",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_linuxx86-64staticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_osxuniversal",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_osxuniversaldebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_osxuniversalstatic",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_osxuniversalstaticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_sources",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsarm64",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsarm64debug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsarm64static",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsarm64staticdebug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsx86-64",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsx86-64debug",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsx86-64static",
    "bazelrio_edu_wpi_first_xrpvendordep_xrpvendordep-cpp_windowsx86-64staticdebug",
)

setup_bzlmodrio_allwpilib_java_dependencies = use_extension("//:maven_java_deps.bzl", "setup_bzlmodrio_allwpilib_java_dependencies")
use_repo(
    setup_bzlmodrio_allwpilib_java_dependencies,
    "edu_wpi_first_apriltag_apriltag_java",
    "edu_wpi_first_cameraserver_cameraserver_java",
    "edu_wpi_first_cscore_cscore_java",
    "edu_wpi_first_fieldimages_fieldimages_java",
    "edu_wpi_first_hal_hal_java",
    "edu_wpi_first_ntcore_ntcore_java",
    "edu_wpi_first_wpilibj_wpilibj_java",
    "edu_wpi_first_wpilibnewcommands_wpilibnewcommands_java",
    "edu_wpi_first_wpimath_wpimath_java",
    "edu_wpi_first_wpinet_wpinet_java",
    "edu_wpi_first_wpiunits_wpiunits_java",
    "edu_wpi_first_wpiutil_wpiutil_java",
)
