alias(
    name = "Glass",
    actual = "@bzlmodrio-allwpilib//libraries/tools/glass",
    tags = [
        "no-roborio", 

        "no-systemcore", 

        "no-bullseye32", 

        "no-bullseye64", 

        "no-bookworm32", 

        "no-bookworm64", 

        "no-raspibullseye32", 

        "no-raspibookworm32", 

    ],
)

alias(
    name = "OutlineViewer",
    actual = "@bzlmodrio-allwpilib//libraries/tools/outlineviewer",
    tags = [
        "no-roborio", 

        "no-systemcore", 

        "no-bullseye32", 

        "no-bullseye64", 

        "no-bookworm32", 

        "no-bookworm64", 

        "no-raspibullseye32", 

        "no-raspibookworm32", 

    ],
)

alias(
    name = "DataLogTool",
    actual = "@bzlmodrio-allwpilib//libraries/tools/datalogtool",
    tags = [
        "no-roborio", 

        "no-systemcore", 

        "no-bullseye32", 

        "no-bullseye64", 

        "no-bookworm32", 

        "no-bookworm64", 

        "no-raspibullseye32", 

        "no-raspibookworm32", 

    ],
)

alias(
    name = "SysId",
    actual = "@bzlmodrio-allwpilib//libraries/tools/sysid",
    tags = [
        "no-roborio", 

        "no-systemcore", 

        "no-bullseye32", 

        "no-bullseye64", 

        "no-bookworm32", 

        "no-bookworm64", 

        "no-raspibullseye32", 

        "no-raspibookworm32", 

    ],
)

