alias(
    name = "Glass",
    actual = "@bzlmodrio-allwpilib//libraries/tools/glass",
    tags = [
        "no-bookworm32",
        "no-bookworm64",
        "no-bullseye32",
        "no-bullseye64",
        "no-raspibookworm32",
        "no-raspibullseye32",
        "no-roborio",
        "no-systemcore",
    ],
)

alias(
    name = "OutlineViewer",
    actual = "@bzlmodrio-allwpilib//libraries/tools/outlineviewer",
    tags = [
        "no-bookworm32",
        "no-bookworm64",
        "no-bullseye32",
        "no-bullseye64",
        "no-raspibookworm32",
        "no-raspibullseye32",
        "no-roborio",
        "no-systemcore",
    ],
)

alias(
    name = "DataLogTool",
    actual = "@bzlmodrio-allwpilib//libraries/tools/datalogtool",
    tags = [
        "no-bookworm32",
        "no-bookworm64",
        "no-bullseye32",
        "no-bullseye64",
        "no-raspibookworm32",
        "no-raspibullseye32",
        "no-roborio",
        "no-systemcore",
    ],
)

alias(
    name = "SysId",
    actual = "@bzlmodrio-allwpilib//libraries/tools/sysid",
    tags = [
        "no-bookworm32",
        "no-bookworm64",
        "no-bullseye32",
        "no-bullseye64",
        "no-raspibookworm32",
        "no-raspibullseye32",
        "no-roborio",
        "no-systemcore",
    ],
)
